components/test-component-oxlj/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: test-app-qlvh
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: test-component-oxlj
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eltest-component-oxlj
  namespace: e2e-test-pipelines-iikp
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-test-component-oxlj
    weight: null
status: {}
